Income code refactoring